[project]
name = "comfyui_nimbus-pack"
description = "Nodes:Image Square Adapter Node, Image Resize And Crop Node"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/sergekatzmann/ComfyUI_Nimbus-Pack"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_Nimbus-Pack"
Icon = ""
